# pentboard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: ffuf_output.json  ffuf_output.txt  gobuster_dir.txt  masscan_json.json  masscan_output.txt  nikto_scan.txt  nmap_basic.txt  nuclei_output.jsonl  nuclei_output.txt
pentboard/: __init__.py  __main__.py  app.py
pentboard/models/: database.py
pentboard/parsers/: ffuf_parser.py  masscan_parser.py  nmap_parser.py  nuclei_parser.py  tool_parsers.py
pentboard/utils/: report.py
pentboard/widgets/: recon_graph.py
tests/: conftest.py  test_database.py  test_parsers.py  test_recon_graph.py  test_report.py
